--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,3 +2,10 @@
   font-weight: bold;
   text-decoration: underline;
 }
+
+.title {
+  margin-top: 2em;
+  font-size: 3em;
+  text-align: left;
+  color: #FF7F50;
+}
