--- a/src/routes/Login/components/Login.scss
+++ b/src/routes/Login/components/Login.scss
@@ -17,6 +17,12 @@
   cursor: pointer;
   padding-left: 1em;
 }
+
+.row {
+  margin-top: 2em;
+}
+
+
 .picture {
   display: block;
   margin: 0 auto;
